feat(propertyRules): add validation of property rules against type
